examples/errors/no_self_param.ik
type Sized class:
    fn size(Int) Int

fn main():
    print("Hello\n")
